--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@prisma/client": "2.17.0",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "4.17.1",
     "express-graphql": "0.12.0",
